# eudaq

./: .gitignore  CMakeLists.txt  GitHub - Verknüpfung.lnk
OfflineMonitor/: OfflineMonitor.rar  OfflineMonitor.vcxproj  OfflineMonitor.vcxproj.filters
OfflineMonitor/inc/: CorrelationPlots.h  CorrelationPlots_interface.h  CorrelationVSTimePlots.h  Planes.h  RootFactories.h  XMLextractorHelpers.h  makeCorrelations.h
OfflineMonitor/scr/: CorrelationPlots.cpp  OfflineMonitor.cxx  Planes.cpp  makeCorrelations.cpp
OfflineMonitor/src/: CorrelationPlots.cpp  CorrelationPlots_interface.cpp  CorrelationVSTimePlots.cpp  OfflineMonitor.cxx  Planes.cpp  makeCorrelations.cpp
RootInterface/: CMakelist.txt  rootInterface.vcxproj  rootInterface.vcxproj.filters
RootInterface/inc/: SCTProducer.h
RootInterface/src/: SCTDict.cxx  SCTDict.h  SCTProducer.cpp
cmake/: CXX11.cmake  EUDAQThreads.cmake  FindLCIO.cmake  FindLIBUSB.cmake  FindW32Pthread.cmake  FindZestSC1.cmake
conf/: SCT_mini.xml  configuration.xml  ni_autotrig.conf  offlinemonconf.xml  sct.xml
debug/: .gitignore
gui/include/: euLog.hh  euRun.hh
gui/src/: euLog.cc  euProd.cc  euRun.cc
main/exe/: CMakeLists.txt
main/exe/src/: ClusterExtractor.cxx  Converter.cxx  ExampleProducer.cxx  ExampleReader.cxx  OfflineMonitor.cxx  SCT_Comparer.cxx  TestDataCollector.cxx  TestLogCollector.cxx  TestReader.cxx  TestRunControl.cxx  getConfiguration.cxx  xmlProducer.cxx
main/include/eudaq/: AidaFileReader.hh  AidaPacket.hh  CommandReceiver.hh  Configuration.hh  DEPFETEvent.hh  DataCollector.hh  DataConverterPlugin.hh  DetectorEvent.hh  EUDRBEvent.hh  Event.hh  EventQueue.hh  EventSynchronisationBase.hh  EventSynchronisationCompareWithTLU.hh  EventSynchronisationDetectorEvents.hh  EventSynchronisationMultiTSEvents.hh  FileReader.hh  FileSerializer.hh  FileWriter.hh  LogCollector.hh  MachineState.hh  MetaData.hh  MimosaConverterPlugin.hh  MultiFileReader.hh  PacketEvent.hh  Platform.hh  PluginManager.hh  Processor - Kopie.hh  Processor.hh  ProcessorBase.hh  ProcessorFileReader.hh  ProcessorFileWriter.hh  Processor_Buffer.hh  Processor_N_2_M_base.hh  Processor_N_2_N.hh  Processor_N_x_M.hh  Processor_N_x_M_input_interface.hh  Processor_Parrallel_add2queue.hh  Processor_add2queue.hh  Processor_batch.hh  Processor_busy_test.hh  (+36 more)
main/lib/: CMakeLists.txt
main/lib/plugins/: APIX-CT-ConverterPlugin.cc  AltroUSBConverterPlugin.cc  DEPFETConverterPlugin.cc  DataConverterPlugin.cc  DefaultConverterPlugin.cc  DetectorEventConverterPlugin.cc  EUDRBConverterPlugin.cc  ExampleConverterPlugin.cc  ExplorerConverterPlugin.cc  FORTISConverterPlugin.cc  Mupix2ConverterPlugin.cc  Mupix3ConverterPlugin.cc  Mupix4ConverterPlugin.cc  NIConverterPlugin.cc  PyBARConverterPlugin.cc  SCTConverterPlugin.cc  SCTUpgradeConverterPlugin.cc  SCTUpgradeConverterPlugin_example.cc  SCTUpgradeConverterPlugin_example2.cc  TAKIConverterPlugin.cc  TimepixConverterPlugin.cc  USBPixI4ConverterPlugin.cc  USBpixConverterPlugin.cc  aidaSyncTestConverterPlugin.cc
main/lib/processors/: Processor.cc  ProcessorBase.cc  ProcessorDataCollector.cc  ProcessorDataSender.cc  ProcessorEventOfInterest.cc  ProcessorFileReader.cc  ProcessorFileWriter.cc  ProcessorShowEventNr.cc  ProcessorWaitForEORE.cc  Processor_Buffer.cc  Processor_Multi_Buffer.cc  Processor_N_2_M_base.cc  Processor_N_2_N.cc  Processor_N_x_M.cc  Processor_N_x_M_input_interface.cc  Processor_Parrallel_add2queue.cc  Processor_add2queue.cc  Processor_batch.cc  Processor_busy_test.cc  Processor_convert_2_StandardEvent.cc  Processor_eventSelectors.cc  Processor_inspector.cc  Processor_merger.cc  Processor_parallel_file_reader.cc  Processor_parralel.cc  Processor_splitter.cc  Processor_splitter_interface.cc
main/lib/src/: AidaFileReader.cc  AidaFileWriter.cc  AidaFileWriterMetaData.cc  AidaPacket.cc  AltroUSBConverterPlugin.cc  CommandReceiver.cc  Configuration.cc  DEPFETEvent.cc  DataCollector.cc  DetectorEvent.cc  EUDRBConverterPlugin.cc  EUDRBEvent.cc  EudaqThread.cc  Event.cc  EventQueue.cc  EventSynchronisationBase.cc  EventSynchronisationCompareWithTLU.cc  EventSynchronisationDetectorEvents.cc  EventSynchronisationMultiTSEvents.cc  ExampleConverterPlugin.cc  FileReader.cc  FileReader_NI_and_TLU.cc  FileReader_PrimarTLU.cc  FileReader_SCT.cc  FileSerializer.cc  FileWriter.cc  FileWriterCheck_for_desync.cc  FileWriterDetectorEvents.cc  FileWriterLCIO.cc  FileWriterMeta.cc  FileWriterMetaSingleEvents.cc  FileWriterNative.cc  FileWriterNull.cc  FileWriterRoot.cc  FileWriterRootC.cc  FileWriterStandard.cc  FileWriterTTree.cc  FileWriterText.cc  FileWriterTextCompact.cc  FileWriterTextCompactTimeStamps.cc  (+48 more)
main/python/src/: PyDataCollector.cpp  PyProducer.cpp
monitors/metamon/: CMakeLists.txt
monitors/offlinemon/: CMakeLists.txt
monitors/offlinemon/src/: CorrelationVSTimePlots.cpp  makeCorrelations.cpp
monitors/onlinemon/: CMakeLists.txt
nreader/: CMakeLists.txt
nreader/detdescription/: EUTelSCTDetector.cc  EUTelSetupDescription.cc
nreader/include/: EUTelSCTDetector.h
nreader/src/: EUTelNativeReader.cc
producers/: CMakeLists.txt
producers/exampleSCTProducer/: CMakeLists.txt
producers/exampleSCTProducer/inc/: SCTDummy.h
producers/exampleSCTProducer/src/: SCTDummy.cc  SCTProducer.cxx
producers/ni/: CMakeLists.txt
producers/root/inc/: ROOTProducer.h
producers/root/src/: ROOTProducer.cpp
producers/slowcontrol/: CMakeLists.txt
producers/slowcontrol/src/: SlowControlProducer.cxx
producers/tlu/: CMakeLists.txt
producers/tlu/src/: TLUController.cc  TLUProducer.cxx
syncTest/inc/: dataQueue.h  paketProducer.h
syncTest/src/: dataQueue.cc  paketProducer.cc  syncTest.cxx
test/useROOTInterface/src/: ROOTInterfaceTest.cxx  TSignals.h
tests/network/src/: fileReciever.cxx  fileSender.cxx
